# vobot-now-playing

./: .gitignore  README.md  app_setup.py  constants.py  init_logging.py  pyproject.toml  vobot_now_playing.py
esp32/apps/win_now_playing/: __init__.py  manifest.yml
ui/: Ui_mainwindow.py  mainwindow.py  mainwindow.ui  message_boxes.py  notifications.py
